--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
 # this file is *not* meant to cover or endorse the use of GitHub Actions, but rather to
 # help test this project
 
-name: Test
+name: Linux Test
 
 on: [pull_request]
 
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.7', '3.8', '3.9', '3.10']
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Checkout
