--- a/.github/workflows/mac-test.yaml
+++ b/.github/workflows/mac-test.yaml
@@ -1,7 +1,7 @@
 # this file is *not* meant to cover or endorse the use of GitHub Actions, but rather to
 # help test this project
 
-name: Test
+name: Mac Test
 
 on: [pull_request]
 
