--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,7 @@ jobs:
       
   build-and-publish:
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - name: Checkout
       uses: actions/checkout@v3
