--- a/.github/workflows/windows-test.yaml
+++ b/.github/workflows/windows-test.yaml
@@ -1,25 +1,57 @@
-# this file is *not* meant to cover or endorse the use of GitHub Actions, but rather to
-# help test this project
+name: Windows Tests
 
-name: Windows Test
-
-on: [pull_request]
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
 
 jobs:
   test:
+    runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
-        python: ['3.7', '3.8', '3.9', '3.10']
-        platform: [windows-latest]
-    runs-on: ${{ matrix.platform }}
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python }}
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python }}
-    - name: Install test dependencies
-      run: pip install pytest
-    - name: Test
-      run: py.test
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install coverage pytest pytest-cov
+        if (Test-Path requirements.txt) { pip install -r requirements.txt }
+
+    - name: Run comprehensive test suite
+      run: |
+        Write-Host "Running all 61 test cases on Windows..."
+        python -m unittest discover tests -v
+
+    - name: Run tests with coverage
+      run: |
+        coverage run -m unittest discover tests
+        coverage report -m
+
+    - name: Run performance benchmarks
+      run: |
+        Write-Host "Running performance benchmarks on Windows..."
+        python performance_test.py
+
+    - name: Run feature showcase
+      run: |
+        Write-Host "Running feature showcase on Windows..."
+        python examples/showcase.py
+
+    - name: Test summary
+      run: |
+        Write-Host "✅ Windows tests passed successfully!"
+        Write-Host "🪟 Platform: Windows"
+        Write-Host "🐍 Python: ${{ matrix.python-version }}"
+        Write-Host "🧪 Test Cases: 61 comprehensive tests"
