--- a/.github/workflows/release-and-publish.yaml
+++ b/.github/workflows/release-and-publish.yaml
@@ -7,6 +7,11 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: write
+  packages: write
+  pull-requests: read
+
 jobs:
   test-before-release:
     name: Pre-Release Testing
@@ -56,6 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: test-before-release
     if: github.event_name == 'release' && github.event.action == 'published'
+    permissions:
+      contents: read
     
     steps:
     - name: Checkout code
@@ -95,15 +102,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: test-before-release
     if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
 
     - name: Generate release notes
       id: release_notes
@@ -170,21 +174,16 @@ jobs:
         
         **Full Changelog**: https://github.com/Srirammkm/jsonQ/compare/v2.0...v$VERSION
         EOF
-        
-        echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
-        cat release_notes.md >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
 
     - name: Create Release
-      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: jsonQ v${{ steps.release_notes.outputs.VERSION }}
-        body: ${{ steps.release_notes.outputs.RELEASE_NOTES }}
-        draft: false
-        prerelease: false
+      run: |
+        VERSION=${GITHUB_REF#refs/tags/v}
+        gh release create ${{ github.ref_name }} \
+          --title "jsonQ v$VERSION" \
+          --notes-file release_notes.md \
+          --latest
 
   update-documentation:
     name: Update Documentation
@@ -244,7 +243,7 @@ jobs:
         echo "📦 Testing PyPI installation..."
         pip install jsonQ --upgrade
         python -c "
-        from src.jquery import Query
+        from jsonQ import Query
         import json
         
         # Test basic functionality
